# jaxvegas

./: .gitignore  CLAUDE.md  README.md  compare.py  pyproject.toml  test_jaxvegas.py
jaxvegas/: __init__.py  integrator.py
